<resources>
    <string name="app_name">Tip_Calculator</string>
    <string name="lblTips">Tips</string>
    <string name="lblTaxAmount">"Tax amount:"</string>
    <string name="rbtnZeroPercent">0%</string>
    <string name="rbtnFivePercent">5%</string>
    <string name="rbtnTenPercent">10%</string>
    <string name="rbtnTwentyPercent">20%</string>
    <string name="btnClear">Clear</string>
    <string name="btnCalculate">Calculate</string>
    <string name="lblTotalAmount">Total amount:</string>
    <string name="lblTipPercentage">Tip %:</string>
    <string name="lblTipAmount">Tip amount:</string>
    <string name="lblGrandTotal">Grand Total:</string>
    <string name="btnBackToTipCalc_Input">Back to Tip Calculator Input</string>
    <string name="txtTotalAmount">" 0.00"</string>
    <string name="hintInital">0.00</string>
    <string name="txtTaxAmount">0.00</string>

</resources>
