<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".CalculatorInputActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/lblTips"
                    android:textSize="100sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/lblTotalAmount"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/txtTotalAmountView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ems="10"
                    android:fontFamily="sans-serif"
                    android:freezesText="false"
                    android:gravity="center|center_vertical"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="number|numberDecimal"
                    android:selectAllOnFocus="true"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/lblTaxAmount"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/txtTaxAmountView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ems="10"
                    android:fontFamily="sans-serif"
                    android:gravity="center|center_vertical"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="number|numberDecimal"
                    android:selectAllOnFocus="true"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <RadioGroup
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbtnZeroPercent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:fontFamily="sans-serif"
                        android:text="@string/rbtnZeroPercent"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/rbtnFivePercent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif"
                        android:text="@string/rbtnFivePercent"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/rbtnTenPercent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif"
                        android:text="@string/rbtnTenPercent"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/rbtnTwentyPercent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif"
                        android:text="@string/rbtnTwentyPercent"
                        android:textSize="24sp" />

                </RadioGroup>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="44dp"
                android:layout_marginBottom="20dp"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnClear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="clearForm"
                        android:text="@string/btnClear" />

                    <Button
                        android:id="@+id/btnCalculate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="calculateTip"
                        android:text="@string/btnCalculate" />
                </LinearLayout>

            </TableRow>
        </TableLayout>
    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>